<resources>
    <string name="app_name">WatchMovie</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_movie_fragment">Hello Movie fragment</string>
    <string name="title_movie">Movie</string>
    <string name="movies_name">Movie Name</string>
    <string name="movies_synopsis">Movie Synopsi</string>
    <string name="title_series">Series</string>
    <string name="series_name">Movie Name</string>
    <string name="change_language_settings">Change Language</string>
    <string name="description">Description</string>
    <string name="look">Look</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="movie_release">Release</string>
    <string name="image_poster">Image Description</string>
    <string name="movie_director">Direcotry</string>
    <string name="movie_genre">Genre</string>
    <string name="informasi">Information</string>
    <string name="favorite">Favorite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="added">Added Successfully</string>
    <string name="failed_add">Failed to Add</string>
    <string name="removed">Removed Successfully</string>
    <string name="failed_remove">Failed to remove</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="search">Search</string>
    <string name="setting">Settings</string>
    <string name="reminder_daily">Daily Reminder</string>
    <string name="reminder_daily_desc">mengirimkan notifikasi ke pengguna untuk kembali ke Aplikasi Movie Catalogue. Daily reminder harus selalu berjalan tiap jam 7 pagi.</string>
    <string name="reminder_release">Release reminder</string>
    <string name="reminder_release_desc">mengirimkan notifikasi ke pengguna semua film yang rilis hari ini selalu berjalan tiap jam 8 pagi.</string>
    <string name="appwidget_text">YOUR FAVORITE MOVIE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">empty</string>
    <string name="reminder_daily_message">Hey, there`s something new</string>
    <string name="search_movie_hint">Search Movie</string>
    <string name="search_series_hint">Search Series</string>
    <string name="three_of">tiga dari</string>
    <string name="has_been_released">has been released</string>
    <string name="new_shows">New Movie</string>
    <string name="check_these">check these out</string>
</resources>
