<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.farzain.watchmovie.fragment.MovieFragment"
        android:label="@string/title_movie"
        tools:layout="@layout/fragment_movie"/>

    <fragment
        android:id="@+id/navigation_series"
        android:name="com.farzain.watchmovie.fragment.SeriesFragment"
        android:label="@string/title_series"
        tools:layout="@layout/fragment_series"/>
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.farzain.watchmovie.fragment.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>